--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="key char-key">Æ</div>
             </div>
             <div class="line">
-                <div class="key" id="enter">ENTER</div>
+                <div class="key" id="enter">SJEKK ORD</div>
                 <div class="key char-key">Z</div>
                 <div class="key char-key">X</div>
                 <div class="key char-key">C</div>
@@ -64,7 +64,7 @@
                 <div class="key char-key">B</div>
                 <div class="key char-key">N</div>
                 <div class="key char-key">M</div>
-                <div class="key" id="backspace">BACKSPACE</div>
+                <div class="key" id="backspace">SLETT</div>
             </div>
         </div>
     </div>
